# flask-refapp

./: .gitignore  Dockerfile  README.md  pyproject.toml  run.py
flask_refapp/: app.py
flask_refapp/adapters/: vlr_adapter.py
flask_refapp/routes/: valorant.py
flask_refapp/services/: valorant_service.py
tests/: conftest.py
tests/adapters/: test_vlr_adapter.py
tests/clients/: test_http_client.py
tests/routes/: test_valorant.py  test_valorant_route.py
tests/services/: test_valorant_service.py
vleague_backend/: app.py
vleague_backend/adapters/: valorant_adapter.py  vlr_adapter.py
vleague_backend/clients/: http_client.py  request.py
vleague_backend/models/: valorant.py  vlr_gg.py  vlr_gg_api.py  vlr_orl.py  vlr_orl_api.py
vleague_backend/port/: valorant_port.py
vleague_backend/routes/: valorant.py  valorant_route.py
vleague_backend/services/: valorant_service.py
