[tool.poetry]
name = "flask_refapp"
version = "0.1.0"
description = ""
authors = ["Subodh Khanal <skhanal5@terpmail.umd.edu>"]
readme = "README.md"
packages = [
    { include = "flask_refapp" },
]

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.7.2"
pre-commit = "^4.0.1"
flask-pydantic = "^0.12.0"
pydantic = "^2.9.2"
pytest = "^8.3.3"
httpx = "^0.27.2"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
